# mnist

./: Dockerfile  README.md  ml-work-cronjob  pyproject.toml  run.sh
note/: mnistp.ipynb
src/mnist/: db.py  main.py  model.py  worker.py
tests/: test_worker.py
