[project]
name = "mnist"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sooj1n", email = "sujin19371@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pymysql>=1.1.1",
    "jigeum>=1.0.2",
    "requests>=2.32.3",
    "python-multipart>=0.0.10",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[project.scripts]
ml-worker = 'mnist.worker:run'
